--- a/mb-web/src/main/resources/application.yml
+++ b/mb-web/src/main/resources/application.yml
@@ -1,13 +1,6 @@
 spring:
-  mvc:
-    view:
-      prefix: /WEB-INF/views/
-      suffix: .jsp
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/app_membercheck?characterEncoding=UTF-8&serverTimezone=UTC
-    username: root
-    password: 123456
+  profiles:
+    active: dev
 
 server:
   port: 8080
